# pos-ropa

./: .gitignore  INSTRUCCIONES_BACKEND.md  README_BACKEND.md  commands_auth.rs  commands_mod.rs  commands_productos.rs  database_connection.rs  database_mod.rs  estructura.txt  instalar_backend.sh  main_rs.rs  models_mod.rs  models_producto.rs  models_usuario.rs  models_venta.rs  package-lock.json  package.json
.github/workflows/: build.yml
src/: ActivarLicencia.css  ActivarLicencia.jsx  App.css  App.jsx  BannerLicencia.css  BannerLicencia.jsx  Configuracion.css  Configuracion.jsx  Devoluciones.css  Devoluciones.jsx  Inventario.css  Inventario.jsx  Login.css  Login.jsx  ModalBienvenida.css  ModalBienvenida.jsx  POS.css  POS.jsx  Recibo.css  Recibo.jsx  Reportes.css  Reportes.jsx  SplashScreen.jsx  sidebar.jsx
src-tauri/: Cargo.toml  schema_sqlite.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: Cargo.toml  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  cajas.rs  configuracion.rs  devoluciones.rs  impresora.rs  licencias.rs  mod.rs  productos.rs  proveedores.rs  reportes.rs  ventas.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/models/: caja.rs  mod.rs  producto.rs  proveedor.rs
src/Caja/: AbrirCaja.jsx  Caja.css  Caja.jsx  CerrarCaja.css  CerrarCaja.jsx  MovimientoCaja.css  MovimientoCaja.jsx  ReporteCierre.jsx
src/Proveedores/: Proveedores.css  Proveedores.jsx
src/components/: ModalBienvenida.jsx  Recibo.jsx  sidebar.css  sidebar.jsx
src/services/: cajaService.js
(+15 files in other folders)
