[package]
name = "sistema-tienda"
version = "0.1.0"
description = "Sistema de punto de venta para tienda de ropa"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CAMBIADO: Removido mysql, agregado rusqlite
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = "0.15"
chrono = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
